Tweak to make JDK11 compat